[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/textures/walls/variation_1/platforms/unlock_floor.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/walls/variation_1/platforms/unlock_floor_normal_map.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/PixelRPG.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/UnlockNextArea.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 31 )

[sub_resource type="DynamicFont" id=3]
size = 6
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=4]
resource_name = "remove_text"
tracks/0/type = "value"
tracks/0/path = NodePath("PayLabel:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PriceLabel:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("PriceLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PriceLabel:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PayLabel:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PayLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "open"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -90, -0.99185, -7.59792, 0.25, 0, -90, -0.25, 0, 0.25, 0, 0, -0.801885, -14.6424, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 1.2, 2 )
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 32, 78 )

[node name="UnlockNextArea" type="StaticBody2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -29, 29 )
texture = ExtResource( 1 )
normal_map = ExtResource( 2 )

[node name="Collider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -29, 0 )
shape = SubResource( 1 )

[node name="DetectPlayer" type="Area2D" parent="."]
visible = false
position = Vector2( -28, -12 )
collision_layer = 16

[node name="Collider" type="CollisionShape2D" parent="DetectPlayer"]
position = Vector2( -1, -21 )
shape = SubResource( 2 )

[node name="PriceLabel" type="Label" parent="."]
visible = false
margin_left = -59.0
margin_top = -22.0
margin_right = -2.0
margin_bottom = -4.0
custom_fonts/font = SubResource( 3 )
text = "PRICE: 0 PILLS"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PayLabel" type="Label" parent="."]
visible = false
margin_left = -59.0
margin_top = -43.0
margin_right = -2.0
margin_bottom = -25.0
custom_fonts/font = SubResource( 3 )
text = "press E to pay"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animation" type="AnimationPlayer" parent="."]
anims/remove_text = SubResource( 4 )
anims/show_text = SubResource( 5 )

[node name="PlatformMove" type="AnimationPlayer" parent="."]
anims/open = SubResource( 6 )

[node name="NoPastPoint" type="StaticBody2D" parent="."]
visible = false
position = Vector2( -29, -80 )

[node name="Collider" type="CollisionShape2D" parent="NoPastPoint"]
shape = SubResource( 7 )
disabled = true
[connection signal="body_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_body_entered"]
[connection signal="body_exited" from="DetectPlayer" to="." method="_on_DetectPlayer_body_exited"]
[connection signal="animation_finished" from="PlatformMove" to="." method="_on_PlatformMove_animation_finished"]
